run/apparmor-daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: run-apparmor
  namespace: run
spec:
  selector:
    matchLabels:
      app: run-apparmor
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: run-apparmor
    spec:
      hostPID: true
      tolerations:
        - operator: Exists
          effect: NoSchedule
      containers:
        - name: reloader
          image: alpine:3.21
          command:
            - /bin/sh
            - -c
            - |
              while true; do
                sleep 3600
                cp /profiles/run-user /host/etc/apparmor.d/run-user
                nsenter -m -u -i -n -p -t 1 -- apparmor_parser -r /etc/apparmor.d/run-user
                echo "AppArmor profile run-user reloaded"
              done
          securityContext:
            privileged: true
          volumeMounts:
            - name: profiles
              mountPath: /profiles
            - name: host-root
              mountPath: /host
      volumes:
        - name: profiles
          configMap:
            name: run-apparmor-profile
        - name: host-root
          hostPath:
            path: /
