run/netpol-daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: run-netpol
  namespace: run
spec:
  selector:
    matchLabels:
      app: run-netpol
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: run-netpol
    spec:
      serviceAccountName: run-netpol
      hostNetwork: true
      tolerations:
        - operator: Exists
          effect: NoSchedule
      containers:
        - name: enforcer
          image: alpine:3.21
          command: [/bin/sh, /scripts/enforce.sh]
          securityContext:
            privileged: true
          volumeMounts:
            - name: script
              mountPath: /scripts
      volumes:
        - name: script
          configMap:
            name: run-netpol-script
            defaultMode: 0755
