run/ingress.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: run
  namespace: run
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - run.pmh.codes
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: run
          port: 8080
